--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\07wik\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\itdev\\AppData\\Roaming\\NetBeans\\19\\build.properties
