--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/praktikum2
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.SQL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,8 +45,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
