--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,15 +28,16 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/praktikum2.jar
+dist.jar=${dist.dir}/praktikum.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/praktikum2
+dist.jlink.output=${dist.jlink.dir}/praktikum
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.SQL.classpath}
+    ${libs.SQL.classpath}:\
+    ${libs.JCalender.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=praktikum2
+jlink.launcher.name=praktikum
 main.class=praktikum2.Praktikum2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
